<resources>
    <string name="app_name">BaoBaoBop</string>
    <string name="title_activity_detail">Thông tin sản phẩm</string>
    <string name="title_activity_main">Menu</string>
    <string name="QLTS">Bảo Bảo Bop</string>
    <string name="welcome">Welcome to BaoBaoBop</string>
    <string name="skip">Skip</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="help">Giúp đỡ</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="loginfailed">Đăng nhập thất bại...</string>
    <string name="pleasewait">Vui lòng chờ</string>
    <string name="quantity">Số lượng :</string>
    <string name="checkout">Hoá đơn</string>
    <string name="Daubep">Đầu bếp</string>

    <string name="cart">Hóa đơn</string>
    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
